test/arrays/compilerErrors/array-generic-type.good
array-generic-type.chpl:4: syntax error: near ']'
array-generic-type.chpl:8: syntax error: near ']'
